add reverbucs dashboard

--- a/index.html
+++ b/index.html
@@ -1,31 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>VR Game Dashboard</title>
-    <style>
-        body { font-family: Arial; text-align: center; padding: 50px; }
-        h1 { color: #333; }
-    </style>
+    <title>Reverbucks Dashboard</title>
+    <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body>
-    <h1>VR Game Dashboard</h1>
-    <p>Your dashboard is live!</p>
+    <div id="root"></div>
+    <script type="module" src="/src/main.jsx"></script>
 </body>
 </html>
-```
-
-3. Save it as `index.html` in your `C:\Users\kyleg\Documents\reverb-vr-dashboard` folder
-
-Now back in the terminal, run:
-```
-git add .
-```
-
-Then:
-```
-git commit -m "Initial commit"
-```
-
-Then:
-```
-git push -u origin main
